# dtf-manager

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: command_context.rs  consts.rs  dtf.rs  main.rs
src/commands/: init.rs  mod.rs
src/commands/bundle/: add.rs  install.rs  mod.rs  remove.rs
src/commands/ssh/: create.rs  list.rs  load.rs  mod.rs
src/commands/symlink/: create.rs  mod.rs
src/commands/zshrc/: generate.rs  mod.rs
src/config/: mod.rs
src/installer/: brew.rs
src/macros/: enum_commands.rs  executor_trait.rs  mod.rs
src/services/: mod.rs  pkg_manager.rs  restore.rs  symlink.rs
src/utils/: file.rs  mod.rs  path_utils.rs
templates/: alias  hammerspoon_config  hist_overrides  variables
