[package]
name = "dtf"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "dtf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.24", features = ["serde"], default-features = false }
clap = { version = "4.5.19", features = ["derive", "suggestions"] }
duct = "0.13.7"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
] }
is-terminal = "0.4.13"
tokio = { version = "1.38.0", features = ["full"] }
paste = "1.0.15"