[package]
name = "dtf"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dtf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
const_format = "0.2.33"
chrono = { version = "0.4.38", features = ["serde"], default-features = false }
clap = { version = "4.5.20", features = ["derive", "suggestions"] }
duct = "0.13.7"
figment = { version = "0.10.19", features = ["serde_yaml", "yaml"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.33"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "blocking"
] }
is-terminal = "0.4.13"
tokio = { version = "1.40.0", features = ["full"] }
paste = "1.0.15"
log = "0.4.22"
env_logger = "0.11.5"
zip = "2.2.0"